themedir  = $(datadir)/themes
adaptadir = $(DESTDIR)$(themedir)/Adapta
noktodir  = $(DESTDIR)$(themedir)/Adapta-Nokto

gtk318dir   = $(srcdir)/gtk-3.0
gtk318_file = \
	$(gtk318dir)/gtk.css \
	$(gtk318dir)/gtk-dark.css
gtk318_asset_file = \
	$(gtk318dir)/assets/bar-blue.svg \
	$(gtk318dir)/assets/bar-green.svg \
	$(gtk318dir)/assets/bar-red.svg \
	$(gtk318dir)/assets/bar-yellow.svg \
	$(gtk318dir)/assets/calendar-day-selected@2.png \
	$(gtk318dir)/assets/calendar-day-selected.png \
	$(gtk318dir)/assets/checkbox-active-selectionmode@2.png \
	$(gtk318dir)/assets/checkbox-active-selectionmode-dark@2.png \
	$(gtk318dir)/assets/checkbox-active-selectionmode-dark.png \
	$(gtk318dir)/assets/checkbox-active-selectionmode.png \
	$(gtk318dir)/assets/checkbox-checked@2.png \
	$(gtk318dir)/assets/checkbox-checked-active@2.png \
	$(gtk318dir)/assets/checkbox-checked-active-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-active-dark.png \
	$(gtk318dir)/assets/checkbox-checked-active.png \
	$(gtk318dir)/assets/checkbox-checked-active-selectionmode@2.png \
	$(gtk318dir)/assets/checkbox-checked-active-selectionmode-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-active-selectionmode-dark.png \
	$(gtk318dir)/assets/checkbox-checked-active-selectionmode.png \
	$(gtk318dir)/assets/checkbox-checked-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-dark.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive@2.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-dark.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-selectionmode@2.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-selectionmode-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-selectionmode-dark.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-selectionmode.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-symbolic@2.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-symbolic-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-symbolic-dark.png \
	$(gtk318dir)/assets/checkbox-checked-insensitive-symbolic.png \
	$(gtk318dir)/assets/checkbox-checked.png \
	$(gtk318dir)/assets/checkbox-checked-selected@2.png \
	$(gtk318dir)/assets/checkbox-checked-selected.png \
	$(gtk318dir)/assets/checkbox-checked-selectionmode@2.png \
	$(gtk318dir)/assets/checkbox-checked-selectionmode-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-selectionmode-dark.png \
	$(gtk318dir)/assets/checkbox-checked-selectionmode.png \
	$(gtk318dir)/assets/checkbox-checked-symbolic@2.png \
	$(gtk318dir)/assets/checkbox-checked-symbolic-dark@2.png \
	$(gtk318dir)/assets/checkbox-checked-symbolic-dark.png \
	$(gtk318dir)/assets/checkbox-checked-symbolic.png \
	$(gtk318dir)/assets/checkbox-insensitive-selectionmode@2.png \
	$(gtk318dir)/assets/checkbox-insensitive-selectionmode-dark@2.png \
	$(gtk318dir)/assets/checkbox-insensitive-selectionmode-dark.png \
	$(gtk318dir)/assets/checkbox-insensitive-selectionmode.png \
	$(gtk318dir)/assets/checkbox-insensitive-symbolic@2.png \
	$(gtk318dir)/assets/checkbox-insensitive-symbolic-dark@2.png \
	$(gtk318dir)/assets/checkbox-insensitive-symbolic-dark.png \
	$(gtk318dir)/assets/checkbox-insensitive-symbolic.png \
	$(gtk318dir)/assets/checkbox-mixed@2.png \
	$(gtk318dir)/assets/checkbox-mixed-active@2.png \
	$(gtk318dir)/assets/checkbox-mixed-active-dark@2.png \
	$(gtk318dir)/assets/checkbox-mixed-active-dark.png \
	$(gtk318dir)/assets/checkbox-mixed-active.png \
	$(gtk318dir)/assets/checkbox-mixed-dark@2.png \
	$(gtk318dir)/assets/checkbox-mixed-dark.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive@2.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive-dark@2.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive-dark.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive-symbolic@2.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive-symbolic-dark@2.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive-symbolic-dark.png \
	$(gtk318dir)/assets/checkbox-mixed-insensitive-symbolic.png \
	$(gtk318dir)/assets/checkbox-mixed.png \
	$(gtk318dir)/assets/checkbox-mixed-selected@2.png \
	$(gtk318dir)/assets/checkbox-mixed-selected.png \
	$(gtk318dir)/assets/checkbox-mixed-symbolic@2.png \
	$(gtk318dir)/assets/checkbox-mixed-symbolic-dark@2.png \
	$(gtk318dir)/assets/checkbox-mixed-symbolic-dark.png \
	$(gtk318dir)/assets/checkbox-mixed-symbolic.png \
	$(gtk318dir)/assets/checkbox-selectionmode@2.png \
	$(gtk318dir)/assets/checkbox-selectionmode-dark@2.png \
	$(gtk318dir)/assets/checkbox-selectionmode-dark.png \
	$(gtk318dir)/assets/checkbox-selectionmode.png \
	$(gtk318dir)/assets/checkbox-symbolic@2.png \
	$(gtk318dir)/assets/checkbox-symbolic-dark@2.png \
	$(gtk318dir)/assets/checkbox-symbolic-dark.png \
	$(gtk318dir)/assets/checkbox-symbolic.png \
	$(gtk318dir)/assets/checkbox-unchecked@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-active@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-active-dark@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-active-dark.png \
	$(gtk318dir)/assets/checkbox-unchecked-active.png \
	$(gtk318dir)/assets/checkbox-unchecked-dark@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-dark.png \
	$(gtk318dir)/assets/checkbox-unchecked-insensitive@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-insensitive-dark@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-insensitive-dark.png \
	$(gtk318dir)/assets/checkbox-unchecked-insensitive.png \
	$(gtk318dir)/assets/checkbox-unchecked.png \
	$(gtk318dir)/assets/checkbox-unchecked-selected@2.png \
	$(gtk318dir)/assets/checkbox-unchecked-selected.png \
	$(gtk318dir)/assets/equal@2.png \
	$(gtk318dir)/assets/equal-active@2.png \
	$(gtk318dir)/assets/equal-active-dark@2.png \
	$(gtk318dir)/assets/equal-active-dark.png \
	$(gtk318dir)/assets/equal-active.png \
	$(gtk318dir)/assets/equal-dark@2.png \
	$(gtk318dir)/assets/equal-dark.png \
	$(gtk318dir)/assets/equal-hover@2.png \
	$(gtk318dir)/assets/equal-hover-dark@2.png \
	$(gtk318dir)/assets/equal-hover-dark.png \
	$(gtk318dir)/assets/equal-hover.png \
	$(gtk318dir)/assets/equal-insensitive@2.png \
	$(gtk318dir)/assets/equal-insensitive-dark@2.png \
	$(gtk318dir)/assets/equal-insensitive-dark.png \
	$(gtk318dir)/assets/equal-insensitive.png \
	$(gtk318dir)/assets/equal.png \
	$(gtk318dir)/assets/osd-shadow@2.png \
	$(gtk318dir)/assets/osd-shadow-backdrop@2.png \
	$(gtk318dir)/assets/osd-shadow-backdrop-dark@2.png \
	$(gtk318dir)/assets/osd-shadow-backdrop-dark.png \
	$(gtk318dir)/assets/osd-shadow-backdrop.png \
	$(gtk318dir)/assets/osd-shadow-dark@2.png \
	$(gtk318dir)/assets/osd-shadow-dark.png \
	$(gtk318dir)/assets/osd-shadow.png \
	$(gtk318dir)/assets/radio-checked@2.png \
	$(gtk318dir)/assets/radio-checked-active@2.png \
	$(gtk318dir)/assets/radio-checked-active-dark@2.png \
	$(gtk318dir)/assets/radio-checked-active-dark.png \
	$(gtk318dir)/assets/radio-checked-active.png \
	$(gtk318dir)/assets/radio-checked-dark@2.png \
	$(gtk318dir)/assets/radio-checked-dark.png \
	$(gtk318dir)/assets/radio-checked-insensitive@2.png \
	$(gtk318dir)/assets/radio-checked-insensitive-dark@2.png \
	$(gtk318dir)/assets/radio-checked-insensitive-dark.png \
	$(gtk318dir)/assets/radio-checked-insensitive.png \
	$(gtk318dir)/assets/radio-checked-insensitive-symbolic@2.png \
	$(gtk318dir)/assets/radio-checked-insensitive-symbolic-dark@2.png \
	$(gtk318dir)/assets/radio-checked-insensitive-symbolic-dark.png \
	$(gtk318dir)/assets/radio-checked-insensitive-symbolic.png \
	$(gtk318dir)/assets/radio-checked.png \
	$(gtk318dir)/assets/radio-checked-selected@2.png \
	$(gtk318dir)/assets/radio-checked-selected.png \
	$(gtk318dir)/assets/radio-checked-symbolic@2.png \
	$(gtk318dir)/assets/radio-checked-symbolic-dark@2.png \
	$(gtk318dir)/assets/radio-checked-symbolic-dark.png \
	$(gtk318dir)/assets/radio-checked-symbolic.png \
	$(gtk318dir)/assets/radio-insensitive-symbolic@2.png \
	$(gtk318dir)/assets/radio-insensitive-symbolic-dark@2.png \
	$(gtk318dir)/assets/radio-insensitive-symbolic-dark.png \
	$(gtk318dir)/assets/radio-insensitive-symbolic.png \
	$(gtk318dir)/assets/radio-mixed@2.png \
	$(gtk318dir)/assets/radio-mixed-active@2.png \
	$(gtk318dir)/assets/radio-mixed-active-dark@2.png \
	$(gtk318dir)/assets/radio-mixed-active-dark.png \
	$(gtk318dir)/assets/radio-mixed-active.png \
	$(gtk318dir)/assets/radio-mixed-dark@2.png \
	$(gtk318dir)/assets/radio-mixed-dark.png \
	$(gtk318dir)/assets/radio-mixed-insensitive@2.png \
	$(gtk318dir)/assets/radio-mixed-insensitive-dark@2.png \
	$(gtk318dir)/assets/radio-mixed-insensitive-dark.png \
	$(gtk318dir)/assets/radio-mixed-insensitive.png \
	$(gtk318dir)/assets/radio-mixed-insensitive-symbolic@2.png \
	$(gtk318dir)/assets/radio-mixed-insensitive-symbolic-dark@2.png \
	$(gtk318dir)/assets/radio-mixed-insensitive-symbolic-dark.png \
	$(gtk318dir)/assets/radio-mixed-insensitive-symbolic.png \
	$(gtk318dir)/assets/radio-mixed.png \
	$(gtk318dir)/assets/radio-mixed-selected@2.png \
	$(gtk318dir)/assets/radio-mixed-selected.png \
	$(gtk318dir)/assets/radio-mixed-symbolic@2.png \
	$(gtk318dir)/assets/radio-mixed-symbolic-dark@2.png \
	$(gtk318dir)/assets/radio-mixed-symbolic-dark.png \
	$(gtk318dir)/assets/radio-mixed-symbolic.png \
	$(gtk318dir)/assets/radio-symbolic@2.png \
	$(gtk318dir)/assets/radio-symbolic-dark@2.png \
	$(gtk318dir)/assets/radio-symbolic-dark.png \
	$(gtk318dir)/assets/radio-symbolic.png \
	$(gtk318dir)/assets/radio-unchecked@2.png \
	$(gtk318dir)/assets/radio-unchecked-active@2.png \
	$(gtk318dir)/assets/radio-unchecked-active-dark@2.png \
	$(gtk318dir)/assets/radio-unchecked-active-dark.png \
	$(gtk318dir)/assets/radio-unchecked-active.png \
	$(gtk318dir)/assets/radio-unchecked-dark@2.png \
	$(gtk318dir)/assets/radio-unchecked-dark.png \
	$(gtk318dir)/assets/radio-unchecked-insensitive@2.png \
	$(gtk318dir)/assets/radio-unchecked-insensitive-dark@2.png \
	$(gtk318dir)/assets/radio-unchecked-insensitive-dark.png \
	$(gtk318dir)/assets/radio-unchecked-insensitive.png \
	$(gtk318dir)/assets/radio-unchecked.png \
	$(gtk318dir)/assets/radio-unchecked-selected@2.png \
	$(gtk318dir)/assets/radio-unchecked-selected.png \
	$(gtk318dir)/assets/running-dot-bottom@2.png \
	$(gtk318dir)/assets/running-dot-bottom.png \
	$(gtk318dir)/assets/running-dot-left@2.png \
	$(gtk318dir)/assets/running-dot-left.png \
	$(gtk318dir)/assets/running-dot-right@2.png \
	$(gtk318dir)/assets/running-dot-right.png \
	$(gtk318dir)/assets/running-dot-top@2.png \
	$(gtk318dir)/assets/running-dot-top.png \
	$(gtk318dir)/assets/slider@2.png \
	$(gtk318dir)/assets/slider-active@2.png \
	$(gtk318dir)/assets/slider-active-dark@2.png \
	$(gtk318dir)/assets/slider-active-dark.png \
	$(gtk318dir)/assets/slider-active.png \
	$(gtk318dir)/assets/slider-dark@2.png \
	$(gtk318dir)/assets/slider-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-active@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-active-dark@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-active-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-active.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-dark@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-insensitive@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-insensitive-dark@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-insensitive-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above-insensitive.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-above.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-active@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-active-dark@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-active-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-active.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-dark@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-insensitive@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-insensitive-dark@2.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-insensitive-dark.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below-insensitive.png \
	$(gtk318dir)/assets/slider-horz-scale-has-marks-below.png \
	$(gtk318dir)/assets/slider-insensitive@2.png \
	$(gtk318dir)/assets/slider-insensitive-dark@2.png \
	$(gtk318dir)/assets/slider-insensitive-dark.png \
	$(gtk318dir)/assets/slider-insensitive.png \
	$(gtk318dir)/assets/slider.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-active@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-active-dark@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-active-dark.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-active.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-dark@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-dark.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-insensitive@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-insensitive-dark@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-insensitive-dark.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above-insensitive.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-above.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-active@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-active-dark@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-active-dark.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-active.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-dark@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-dark.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-insensitive@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-insensitive-dark@2.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-insensitive-dark.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below-insensitive.png \
	$(gtk318dir)/assets/slider-vert-scale-has-marks-below.png \
	$(gtk318dir)/assets/toggle-off@2.png \
	$(gtk318dir)/assets/toggle-off-dark@2.png \
	$(gtk318dir)/assets/toggle-off-dark.png \
	$(gtk318dir)/assets/toggle-off-hover@2.png \
	$(gtk318dir)/assets/toggle-off-hover-dark@2.png \
	$(gtk318dir)/assets/toggle-off-hover-dark.png \
	$(gtk318dir)/assets/toggle-off-hover.png \
	$(gtk318dir)/assets/toggle-off-insensitive@2.png \
	$(gtk318dir)/assets/toggle-off-insensitive-dark@2.png \
	$(gtk318dir)/assets/toggle-off-insensitive-dark.png \
	$(gtk318dir)/assets/toggle-off-insensitive.png \
	$(gtk318dir)/assets/toggle-off.png \
	$(gtk318dir)/assets/toggle-on@2.png \
	$(gtk318dir)/assets/toggle-on-hover@2.png \
	$(gtk318dir)/assets/toggle-on-hover.png \
	$(gtk318dir)/assets/toggle-on-insensitive@2.png \
	$(gtk318dir)/assets/toggle-on-insensitive-dark@2.png \
	$(gtk318dir)/assets/toggle-on-insensitive-dark.png \
	$(gtk318dir)/assets/toggle-on-insensitive.png \
	$(gtk318dir)/assets/toggle-on.png \
	$(gtk318dir)/assets/window-close@2.png \
	$(gtk318dir)/assets/window-close-active@2.png \
	$(gtk318dir)/assets/window-close-active.png \
	$(gtk318dir)/assets/window-close.png \
	$(gtk318dir)/assets/window-close-ssd@2.png \
	$(gtk318dir)/assets/window-close-ssd-active@2.png \
	$(gtk318dir)/assets/window-close-ssd-active.png \
	$(gtk318dir)/assets/window-close-ssd-backdrop@2.png \
	$(gtk318dir)/assets/window-close-ssd-backdrop-active@2.png \
	$(gtk318dir)/assets/window-close-ssd-backdrop-active.png \
	$(gtk318dir)/assets/window-close-ssd-backdrop-hover@2.png \
	$(gtk318dir)/assets/window-close-ssd-backdrop-hover.png \
	$(gtk318dir)/assets/window-close-ssd-backdrop.png \
	$(gtk318dir)/assets/window-close-ssd-hover@2.png \
	$(gtk318dir)/assets/window-close-ssd-hover.png \
	$(gtk318dir)/assets/window-close-ssd.png \
	$(gtk318dir)/assets/window-maximize@2.png \
	$(gtk318dir)/assets/window-maximize-active@2.png \
	$(gtk318dir)/assets/window-maximize-active.png \
	$(gtk318dir)/assets/window-maximize.png \
	$(gtk318dir)/assets/window-maximize-ssd@2.png \
	$(gtk318dir)/assets/window-maximize-ssd-active@2.png \
	$(gtk318dir)/assets/window-maximize-ssd-active.png \
	$(gtk318dir)/assets/window-maximize-ssd-backdrop@2.png \
	$(gtk318dir)/assets/window-maximize-ssd-backdrop-active@2.png \
	$(gtk318dir)/assets/window-maximize-ssd-backdrop-active.png \
	$(gtk318dir)/assets/window-maximize-ssd-backdrop-hover@2.png \
	$(gtk318dir)/assets/window-maximize-ssd-backdrop-hover.png \
	$(gtk318dir)/assets/window-maximize-ssd-backdrop.png \
	$(gtk318dir)/assets/window-maximize-ssd-hover@2.png \
	$(gtk318dir)/assets/window-maximize-ssd-hover.png \
	$(gtk318dir)/assets/window-maximize-ssd.png \
	$(gtk318dir)/assets/window-minimize@2.png \
	$(gtk318dir)/assets/window-minimize-active@2.png \
	$(gtk318dir)/assets/window-minimize-active.png \
	$(gtk318dir)/assets/window-minimize.png \
	$(gtk318dir)/assets/window-minimize-ssd@2.png \
	$(gtk318dir)/assets/window-minimize-ssd-active@2.png \
	$(gtk318dir)/assets/window-minimize-ssd-active.png \
	$(gtk318dir)/assets/window-minimize-ssd-backdrop@2.png \
	$(gtk318dir)/assets/window-minimize-ssd-backdrop-active@2.png \
	$(gtk318dir)/assets/window-minimize-ssd-backdrop-active.png \
	$(gtk318dir)/assets/window-minimize-ssd-backdrop-hover@2.png \
	$(gtk318dir)/assets/window-minimize-ssd-backdrop-hover.png \
	$(gtk318dir)/assets/window-minimize-ssd-backdrop.png \
	$(gtk318dir)/assets/window-minimize-ssd-hover@2.png \
	$(gtk318dir)/assets/window-minimize-ssd-hover.png \
	$(gtk318dir)/assets/window-minimize-ssd.png \
	$(gtk318dir)/assets/window-unmaximize@2.png \
	$(gtk318dir)/assets/window-unmaximize-active@2.png \
	$(gtk318dir)/assets/window-unmaximize-active.png \
	$(gtk318dir)/assets/window-unmaximize.png \
	$(gtk318dir)/assets/window-unmaximize-ssd@2.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-active@2.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-active.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-backdrop@2.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-backdrop-active@2.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-backdrop-active.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-backdrop-hover@2.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-backdrop-hover.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-backdrop.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-hover@2.png \
	$(gtk318dir)/assets/window-unmaximize-ssd-hover.png \
	$(gtk318dir)/assets/window-unmaximize-ssd.png

gtk320dir   = $(srcdir)/gtk-3.20
gtk320_file = \
	$(gtk320dir)/gtk.css \
	$(gtk320dir)/gtk-dark.css

gtk2dir   = $(srcdir)/gtk-2.0
gtk2_file = \
	$(gtk2dir)/3rd-party.rc \
	$(gtk2dir)/colors.rc \
	$(gtk2dir)/common.rc \
	$(gtk2dir)/misc.rc
gtk2_gtkrc_file = \
	$(gtk2dir)/gtkrc
gtk2_arrow_file = \
	$(gtk2dir)/Arrows/down-alt-hover.png \
	$(gtk2dir)/Arrows/down-alt-insensitive.png \
	$(gtk2dir)/Arrows/down-alt.png \
	$(gtk2dir)/Arrows/down-insensitive.png \
	$(gtk2dir)/Arrows/down.png \
	$(gtk2dir)/Arrows/left-alt-hover.png \
	$(gtk2dir)/Arrows/left-alt-insensitive.png \
	$(gtk2dir)/Arrows/left-alt.png \
	$(gtk2dir)/Arrows/left-insensitive.png \
	$(gtk2dir)/Arrows/left.png \
	$(gtk2dir)/Arrows/right-alt-hover.png \
	$(gtk2dir)/Arrows/right-alt-insensitive.png \
	$(gtk2dir)/Arrows/right-alt.png \
	$(gtk2dir)/Arrows/right-insensitive.png \
	$(gtk2dir)/Arrows/right.png \
	$(gtk2dir)/Arrows/up-alt-hover.png \
	$(gtk2dir)/Arrows/up-alt-insensitive.png \
	$(gtk2dir)/Arrows/up-alt.png \
	$(gtk2dir)/Arrows/up-insensitive.png \
	$(gtk2dir)/Arrows/up.png
gtk2_button_file = \
	$(gtk2dir)/Buttons/button-active.png \
	$(gtk2dir)/Buttons/button-hover.png \
	$(gtk2dir)/Buttons/button-insensitive.png \
	$(gtk2dir)/Buttons/button.png \
	$(gtk2dir)/Buttons/checked-flat-button-active.png \
	$(gtk2dir)/Buttons/checked-flat-button-hover.png \
	$(gtk2dir)/Buttons/checked-flat-button-insensitive.png \
	$(gtk2dir)/Buttons/checked-flat-button.png \
	$(gtk2dir)/Buttons/flat-button-active.png \
	$(gtk2dir)/Buttons/flat-button-hover.png \
	$(gtk2dir)/Buttons/ltr-button-active.png \
	$(gtk2dir)/Buttons/ltr-button-hover.png \
	$(gtk2dir)/Buttons/ltr-button-insensitive.png \
	$(gtk2dir)/Buttons/ltr-button.png \
	$(gtk2dir)/Buttons/rtl-button-active.png \
	$(gtk2dir)/Buttons/rtl-button-hover.png \
	$(gtk2dir)/Buttons/rtl-button-insensitive.png \
	$(gtk2dir)/Buttons/rtl-button.png
gtk2_checkradio_file = \
	$(gtk2dir)/Check-Radio/check-insensitive.png \
	$(gtk2dir)/Check-Radio/check-off-active.png \
	$(gtk2dir)/Check-Radio/check-off-hover.png \
	$(gtk2dir)/Check-Radio/check-off-insensitive.png \
	$(gtk2dir)/Check-Radio/check-off.png \
	$(gtk2dir)/Check-Radio/check-on-active.png \
	$(gtk2dir)/Check-Radio/check-on-hover.png \
	$(gtk2dir)/Check-Radio/check-on-insensitive.png \
	$(gtk2dir)/Check-Radio/check-on.png \
	$(gtk2dir)/Check-Radio/check.png \
	$(gtk2dir)/Check-Radio/check-selected.png \
	$(gtk2dir)/Check-Radio/radio-insensitive.png \
	$(gtk2dir)/Check-Radio/radio-off-active.png \
	$(gtk2dir)/Check-Radio/radio-off-hover.png \
	$(gtk2dir)/Check-Radio/radio-off-insensitive.png \
	$(gtk2dir)/Check-Radio/radio-off.png \
	$(gtk2dir)/Check-Radio/radio-on-active.png \
	$(gtk2dir)/Check-Radio/radio-on-hover.png \
	$(gtk2dir)/Check-Radio/radio-on-insensitive.png \
	$(gtk2dir)/Check-Radio/radio-on.png \
	$(gtk2dir)/Check-Radio/radio.png \
	$(gtk2dir)/Check-Radio/radio-selected.png
gtk2_column_file = \
	$(gtk2dir)/Column/column-active.png \
	$(gtk2dir)/Column/column-hover.png \
	$(gtk2dir)/Column/column-insensitive.png \
	$(gtk2dir)/Column/column.png
gtk2_entry_file = \
	$(gtk2dir)/Entry/base_entry-active.png \
	$(gtk2dir)/Entry/base_entry-insensitive.png \
	$(gtk2dir)/Entry/base_entry.png \
	$(gtk2dir)/Entry/entry-active.png \
	$(gtk2dir)/Entry/entry-insensitive.png \
	$(gtk2dir)/Entry/entry.png \
	$(gtk2dir)/Entry/ltr-base_entry-active.png \
	$(gtk2dir)/Entry/ltr-base_entry-insensitive.png \
	$(gtk2dir)/Entry/ltr-base_entry.png \
	$(gtk2dir)/Entry/ltr-entry-active.png \
	$(gtk2dir)/Entry/ltr-entry-insensitive.png \
	$(gtk2dir)/Entry/ltr-entry.png \
	$(gtk2dir)/Entry/rtl-base_entry-active.png \
	$(gtk2dir)/Entry/rtl-base_entry-insensitive.png \
	$(gtk2dir)/Entry/rtl-base_entry.png \
	$(gtk2dir)/Entry/rtl-entry-active.png \
	$(gtk2dir)/Entry/rtl-entry-insensitive.png \
	$(gtk2dir)/Entry/rtl-entry.png
gtk2_handle_file = \
	$(gtk2dir)/Handles/h-handle-active.png \
	$(gtk2dir)/Handles/h-handle-hover.png \
	$(gtk2dir)/Handles/h-handle-insensitive.png \
	$(gtk2dir)/Handles/h-handle.png \
	$(gtk2dir)/Handles/v-handle-active.png \
	$(gtk2dir)/Handles/v-handle-hover.png \
	$(gtk2dir)/Handles/v-handle-insensitive.png \
	$(gtk2dir)/Handles/v-handle.png
gtk2_line_file = \
	$(gtk2dir)/Lines/h-line.png \
	$(gtk2dir)/Lines/menu-line-ltr.png \
	$(gtk2dir)/Lines/menu-line-rtl.png \
	$(gtk2dir)/Lines/v-line.png
gtk2_other_file = \
	$(gtk2dir)/Others/bottom.png \
	$(gtk2dir)/Others/focus.png \
	$(gtk2dir)/Others/left.png \
	$(gtk2dir)/Others/null.svg \
	$(gtk2dir)/Others/right.png \
	$(gtk2dir)/Others/top-hover.png \
	$(gtk2dir)/Others/top.png
gtk2_progress_file = \
	$(gtk2dir)/ProgressBar/bar.png \
	$(gtk2dir)/ProgressBar/trough.png
gtk2_range_file = \
	$(gtk2dir)/Range/h-scale-trough-insensitive.png \
	$(gtk2dir)/Range/h-scale-trough.png \
	$(gtk2dir)/Range/scale-slider-active.png \
	$(gtk2dir)/Range/scale-slider-hover.png \
	$(gtk2dir)/Range/scale-slider-insensitive.png \
	$(gtk2dir)/Range/scale-slider.png \
	$(gtk2dir)/Range/v-scale-trough-insensitive.png \
	$(gtk2dir)/Range/v-scale-trough.png
gtk2_scrollbar_file = \
	$(gtk2dir)/Scrollbars/h-slider-active.png \
	$(gtk2dir)/Scrollbars/h-slider-hover.png \
	$(gtk2dir)/Scrollbars/h-slider-insensitive.png \
	$(gtk2dir)/Scrollbars/h-slider.png \
	$(gtk2dir)/Scrollbars/h-trough.png \
	$(gtk2dir)/Scrollbars/v-slider-active.png \
	$(gtk2dir)/Scrollbars/v-slider-hover.png \
	$(gtk2dir)/Scrollbars/v-slider-insensitive.png \
	$(gtk2dir)/Scrollbars/v-slider.png \
	$(gtk2dir)/Scrollbars/v-trough.png
gtk2_shadow_file = \
	$(gtk2dir)/Shadows/frame.png \
	$(gtk2dir)/Shadows/gap.png \
	$(gtk2dir)/Shadows/z-depth-1.svg \
	$(gtk2dir)/Shadows/z-depth-2.svg
gtk2_spin_file = \
	$(gtk2dir)/Spin/ltr-down-active.png \
	$(gtk2dir)/Spin/ltr-down-hover.png \
	$(gtk2dir)/Spin/ltr-down-insensitive.png \
	$(gtk2dir)/Spin/ltr-down.png \
	$(gtk2dir)/Spin/ltr-up-active.png \
	$(gtk2dir)/Spin/ltr-up-hover.png \
	$(gtk2dir)/Spin/ltr-up-insensitive.png \
	$(gtk2dir)/Spin/ltr-up.png \
	$(gtk2dir)/Spin/rtl-down-active.png \
	$(gtk2dir)/Spin/rtl-down-hover.png \
	$(gtk2dir)/Spin/rtl-down-insensitive.png \
	$(gtk2dir)/Spin/rtl-down.png \
	$(gtk2dir)/Spin/rtl-up-active.png \
	$(gtk2dir)/Spin/rtl-up-hover.png \
	$(gtk2dir)/Spin/rtl-up-insensitive.png \
	$(gtk2dir)/Spin/rtl-up.png
gtk2_toolbar_file = \
	$(gtk2dir)/Toolbar/inline-toolbar.png

gtk2_nokto_file = \
	$(gtk2dir)/3rd-party-dark.rc \
	$(gtk2dir)/colors-dark.rc \
	$(gtk2dir)/common-dark.rc \
	$(gtk2dir)/misc-dark.rc
gtk2_nokto_gtkrc_file = \
	$(gtk2dir)/gtkrc-dark
gtk2_nokto_arrow_file = \
	$(gtk2dir)/Arrows/down-alt-dark.png \
	$(gtk2dir)/Arrows/down-alt-hover-dark.png \
	$(gtk2dir)/Arrows/down-alt-insensitive-dark.png \
	$(gtk2dir)/Arrows/down-dark.png \
	$(gtk2dir)/Arrows/down-insensitive-dark.png \
	$(gtk2dir)/Arrows/left-alt-dark.png \
	$(gtk2dir)/Arrows/left-alt-hover-dark.png \
	$(gtk2dir)/Arrows/left-alt-insensitive-dark.png \
	$(gtk2dir)/Arrows/left-dark.png \
	$(gtk2dir)/Arrows/left-insensitive-dark.png \
	$(gtk2dir)/Arrows/right-alt-dark.png \
	$(gtk2dir)/Arrows/right-alt-hover-dark.png \
	$(gtk2dir)/Arrows/right-alt-insensitive-dark.png \
	$(gtk2dir)/Arrows/right-dark.png \
	$(gtk2dir)/Arrows/right-insensitive-dark.png \
	$(gtk2dir)/Arrows/up-alt-dark.png \
	$(gtk2dir)/Arrows/up-alt-hover-dark.png \
	$(gtk2dir)/Arrows/up-alt-insensitive-dark.png \
	$(gtk2dir)/Arrows/up-dark.png \
	$(gtk2dir)/Arrows/up-insensitive-dark.png
gtk2_nokto_button_file = \
	$(gtk2dir)/Buttons/button-active-dark.png \
	$(gtk2dir)/Buttons/button-dark.png \
	$(gtk2dir)/Buttons/button-hover-dark.png \
	$(gtk2dir)/Buttons/button-insensitive-dark.png \
	$(gtk2dir)/Buttons/checked-flat-button-active.png \
	$(gtk2dir)/Buttons/checked-flat-button-hover.png \
	$(gtk2dir)/Buttons/checked-flat-button-insensitive.png \
	$(gtk2dir)/Buttons/checked-flat-button.png \
	$(gtk2dir)/Buttons/flat-button-active-dark.png \
	$(gtk2dir)/Buttons/flat-button-hover-dark.png \
	$(gtk2dir)/Buttons/ltr-button-active-dark.png \
	$(gtk2dir)/Buttons/ltr-button-dark.png \
	$(gtk2dir)/Buttons/ltr-button-hover-dark.png \
	$(gtk2dir)/Buttons/ltr-button-insensitive-dark.png \
	$(gtk2dir)/Buttons/rtl-button-active-dark.png \
	$(gtk2dir)/Buttons/rtl-button-dark.png \
	$(gtk2dir)/Buttons/rtl-button-hover-dark.png \
	$(gtk2dir)/Buttons/rtl-button-insensitive-dark.png
gtk2_nokto_checkradio_file = \
	$(gtk2dir)/Check-Radio/check-dark.png \
	$(gtk2dir)/Check-Radio/check-insensitive-dark.png \
	$(gtk2dir)/Check-Radio/check-off-active-dark.png \
	$(gtk2dir)/Check-Radio/check-off-dark.png \
	$(gtk2dir)/Check-Radio/check-off-hover-dark.png \
	$(gtk2dir)/Check-Radio/check-off-insensitive-dark.png \
	$(gtk2dir)/Check-Radio/check-on-active-dark.png \
	$(gtk2dir)/Check-Radio/check-on-dark.png \
	$(gtk2dir)/Check-Radio/check-on-hover-dark.png \
	$(gtk2dir)/Check-Radio/check-on-insensitive-dark.png \
	$(gtk2dir)/Check-Radio/check-selected-dark.png \
	$(gtk2dir)/Check-Radio/radio-dark.png \
	$(gtk2dir)/Check-Radio/radio-insensitive-dark.png \
	$(gtk2dir)/Check-Radio/radio-off-active-dark.png \
	$(gtk2dir)/Check-Radio/radio-off-dark.png \
	$(gtk2dir)/Check-Radio/radio-off-hover-dark.png \
	$(gtk2dir)/Check-Radio/radio-off-insensitive-dark.png \
	$(gtk2dir)/Check-Radio/radio-on-active-dark.png \
	$(gtk2dir)/Check-Radio/radio-on-dark.png \
	$(gtk2dir)/Check-Radio/radio-on-hover-dark.png \
	$(gtk2dir)/Check-Radio/radio-on-insensitive-dark.png \
	$(gtk2dir)/Check-Radio/radio-selected-dark.png
gtk2_nokto_column_file = \
	$(gtk2dir)/Column/column-active-dark.png \
	$(gtk2dir)/Column/column-dark.png \
	$(gtk2dir)/Column/column-hover-dark.png \
	$(gtk2dir)/Column/column-insensitive-dark.png
gtk2_nokto_entry_file = \
	$(gtk2dir)/Entry/base_entry-active-dark.png \
	$(gtk2dir)/Entry/base_entry-dark.png \
	$(gtk2dir)/Entry/base_entry-insensitive-dark.png \
	$(gtk2dir)/Entry/entry-active-dark.png \
	$(gtk2dir)/Entry/entry-dark.png \
	$(gtk2dir)/Entry/entry-insensitive-dark.png \
	$(gtk2dir)/Entry/ltr-base_entry-active-dark.png \
	$(gtk2dir)/Entry/ltr-base_entry-dark.png \
	$(gtk2dir)/Entry/ltr-base_entry-insensitive-dark.png \
	$(gtk2dir)/Entry/ltr-entry-active-dark.png \
	$(gtk2dir)/Entry/ltr-entry-dark.png \
	$(gtk2dir)/Entry/ltr-entry-insensitive-dark.png \
	$(gtk2dir)/Entry/rtl-base_entry-active-dark.png \
	$(gtk2dir)/Entry/rtl-base_entry-dark.png \
	$(gtk2dir)/Entry/rtl-base_entry-insensitive-dark.png \
	$(gtk2dir)/Entry/rtl-entry-active-dark.png \
	$(gtk2dir)/Entry/rtl-entry-dark.png \
	$(gtk2dir)/Entry/rtl-entry-insensitive-dark.png
gtk2_nokto_handle_file = \
	$(gtk2dir)/Handles/h-handle-active-dark.png \
	$(gtk2dir)/Handles/h-handle-dark.png \
	$(gtk2dir)/Handles/h-handle-hover-dark.png \
	$(gtk2dir)/Handles/h-handle-insensitive-dark.png \
	$(gtk2dir)/Handles/v-handle-active-dark.png \
	$(gtk2dir)/Handles/v-handle-dark.png \
	$(gtk2dir)/Handles/v-handle-hover-dark.png \
	$(gtk2dir)/Handles/v-handle-insensitive-dark.png
gtk2_nokto_line_file = \
	$(gtk2dir)/Lines/h-line.png \
	$(gtk2dir)/Lines/menu-line-ltr.png \
	$(gtk2dir)/Lines/menu-line-rtl.png \
	$(gtk2dir)/Lines/v-line.png
gtk2_nokto_other_file = \
	$(gtk2dir)/Others/bottom.png \
	$(gtk2dir)/Others/focus-dark.png \
	$(gtk2dir)/Others/left.png \
	$(gtk2dir)/Others/null.svg \
	$(gtk2dir)/Others/right.png \
	$(gtk2dir)/Others/top-hover.png \
	$(gtk2dir)/Others/top.png
gtk2_nokto_progress_file = \
	$(gtk2dir)/ProgressBar/bar.png \
	$(gtk2dir)/ProgressBar/trough-dark.png
gtk2_nokto_range_file = \
	$(gtk2dir)/Range/h-scale-trough-dark.png \
	$(gtk2dir)/Range/h-scale-trough-insensitive-dark.png \
	$(gtk2dir)/Range/scale-slider-active.png \
	$(gtk2dir)/Range/scale-slider-hover.png \
	$(gtk2dir)/Range/scale-slider-insensitive-dark.png \
	$(gtk2dir)/Range/scale-slider.png \
	$(gtk2dir)/Range/v-scale-trough-dark.png \
	$(gtk2dir)/Range/v-scale-trough-insensitive-dark.png
gtk2_nokto_scrollbar_file = \
	$(gtk2dir)/Scrollbars/h-slider-active-dark.png \
	$(gtk2dir)/Scrollbars/h-slider-dark.png \
	$(gtk2dir)/Scrollbars/h-slider-hover-dark.png \
	$(gtk2dir)/Scrollbars/h-slider-insensitive-dark.png \
	$(gtk2dir)/Scrollbars/h-trough-dark.png \
	$(gtk2dir)/Scrollbars/v-slider-active-dark.png \
	$(gtk2dir)/Scrollbars/v-slider-dark.png \
	$(gtk2dir)/Scrollbars/v-slider-hover-dark.png \
	$(gtk2dir)/Scrollbars/v-slider-insensitive-dark.png \
	$(gtk2dir)/Scrollbars/v-trough-dark.png
gtk2_nokto_shadow_file = \
	$(gtk2dir)/Shadows/frame.png \
	$(gtk2dir)/Shadows/gap.png \
	$(gtk2dir)/Shadows/z-depth-1.svg \
	$(gtk2dir)/Shadows/z-depth-2.svg
gtk2_nokto_spin_file = \
	$(gtk2dir)/Spin/ltr-down-active-dark.png \
	$(gtk2dir)/Spin/ltr-down-dark.png \
	$(gtk2dir)/Spin/ltr-down-hover-dark.png \
	$(gtk2dir)/Spin/ltr-down-insensitive-dark.png \
	$(gtk2dir)/Spin/ltr-up-active-dark.png \
	$(gtk2dir)/Spin/ltr-up-dark.png \
	$(gtk2dir)/Spin/ltr-up-hover-dark.png \
	$(gtk2dir)/Spin/ltr-up-insensitive-dark.png \
	$(gtk2dir)/Spin/rtl-down-active-dark.png \
	$(gtk2dir)/Spin/rtl-down-dark.png \
	$(gtk2dir)/Spin/rtl-down-hover-dark.png \
	$(gtk2dir)/Spin/rtl-down-insensitive-dark.png \
	$(gtk2dir)/Spin/rtl-up-active-dark.png \
	$(gtk2dir)/Spin/rtl-up-dark.png \
	$(gtk2dir)/Spin/rtl-up-hover-dark.png \
	$(gtk2dir)/Spin/rtl-up-insensitive-dark.png
gtk2_nokto_toolbar_file = \
	$(gtk2dir)/Toolbar/inline-toolbar-dark.png

gtknextdir   = $(srcdir)/gtk-3.22
gtknext_file = \
	$(gtknextdir)/gtk.css \
	$(gtknextdir)/gtk-dark.css

index_file       = $(srcdir)/index.theme
index_nokto_file = $(srcdir)/index.theme-nokto

install-data-local:
	$(MKDIR_P) $(adaptadir)
	$(MKDIR_P) $(noktodir)

	cp -Rv $(index_file) $(adaptadir)
	cp -Rv $(index_nokto_file) $(noktodir)/index.theme

	$(MKDIR_P) $(adaptadir)/gtk-3.0
	$(MKDIR_P) $(adaptadir)/gtk-3.0/assets
	cp -Rv $(gtk318_file) $(adaptadir)/gtk-3.0
	cp -Rv $(gtk318_asset_file) $(adaptadir)/gtk-3.0/assets

	$(MKDIR_P) $(adaptadir)/gtk-3.20
	$(MKDIR_P) $(adaptadir)/gtk-3.20/assets
	cp -Rv $(gtk320_file) $(adaptadir)/gtk-3.20
	cp -Rv $(gtk318_asset_file) $(adaptadir)/gtk-3.20/assets

	cd $(adaptadir)
	ln -sf ../Adapta/gtk-3.0 $(noktodir)/gtk-3.0
	ln -sf ../Adapta/gtk-3.20 $(noktodir)/gtk-3.20

	$(MKDIR_P) $(adaptadir)/gtk-2.0
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Arrows
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Buttons
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Check-Radio
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Column
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Entry
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Handles
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Lines
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Others
	$(MKDIR_P) $(adaptadir)/gtk-2.0/ProgressBar
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Range
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Scrollbars
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Shadows
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Spin
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Toolbar
	cp -Rv $(gtk2_file) $(adaptadir)/gtk-2.0
	cp -Rv $(gtk2_gtkrc_file) $(adaptadir)/gtk-2.0
	cp -Rv $(gtk2_arrow_file) $(adaptadir)/gtk-2.0/Arrows
	cp -Rv $(gtk2_button_file) $(adaptadir)/gtk-2.0/Buttons
	cp -Rv $(gtk2_checkradio_file) $(adaptadir)/gtk-2.0/Check-Radio
	cp -Rv $(gtk2_column_file) $(adaptadir)/gtk-2.0/Column
	cp -Rv $(gtk2_entry_file) $(adaptadir)/gtk-2.0/Entry
	cp -Rv $(gtk2_handle_file) $(adaptadir)/gtk-2.0/Handles
	cp -Rv $(gtk2_line_file) $(adaptadir)/gtk-2.0/Lines
	cp -Rv $(gtk2_other_file) $(adaptadir)/gtk-2.0/Others
	cp -Rv $(gtk2_progress_file) $(adaptadir)/gtk-2.0/ProgressBar
	cp -Rv $(gtk2_range_file) $(adaptadir)/gtk-2.0/Range
	cp -Rv $(gtk2_scrollbar_file) $(adaptadir)/gtk-2.0/Scrollbars
	cp -Rv $(gtk2_shadow_file) $(adaptadir)/gtk-2.0/Shadows
	cp -Rv $(gtk2_spin_file) $(adaptadir)/gtk-2.0/Spin
	cp -Rv $(gtk2_toolbar_file) $(adaptadir)/gtk-2.0/Toolbar

	$(MKDIR_P) $(noktodir)/gtk-2.0
	$(MKDIR_P) $(noktodir)/gtk-2.0/Arrows
	$(MKDIR_P) $(noktodir)/gtk-2.0/Buttons
	$(MKDIR_P) $(noktodir)/gtk-2.0/Check-Radio
	$(MKDIR_P) $(noktodir)/gtk-2.0/Column
	$(MKDIR_P) $(noktodir)/gtk-2.0/Entry
	$(MKDIR_P) $(noktodir)/gtk-2.0/Handles
	$(MKDIR_P) $(noktodir)/gtk-2.0/Lines
	$(MKDIR_P) $(noktodir)/gtk-2.0/Others
	$(MKDIR_P) $(noktodir)/gtk-2.0/ProgressBar
	$(MKDIR_P) $(noktodir)/gtk-2.0/Range
	$(MKDIR_P) $(noktodir)/gtk-2.0/Scrollbars
	$(MKDIR_P) $(noktodir)/gtk-2.0/Shadows
	$(MKDIR_P) $(noktodir)/gtk-2.0/Spin
	$(MKDIR_P) $(noktodir)/gtk-2.0/Toolbar
	cp -Rv $(gtk2_nokto_file) $(noktodir)/gtk-2.0
	cp -Rv $(gtk2_nokto_gtkrc_file) $(noktodir)/gtk-2.0/gtkrc
	cp -Rv $(gtk2_nokto_arrow_file) $(noktodir)/gtk-2.0/Arrows
	cp -Rv $(gtk2_nokto_button_file) $(noktodir)/gtk-2.0/Buttons
	cp -Rv $(gtk2_nokto_checkradio_file) $(noktodir)/gtk-2.0/Check-Radio
	cp -Rv $(gtk2_nokto_column_file) $(noktodir)/gtk-2.0/Column
	cp -Rv $(gtk2_nokto_entry_file) $(noktodir)/gtk-2.0/Entry
	cp -Rv $(gtk2_nokto_handle_file) $(noktodir)/gtk-2.0/Handles
	cp -Rv $(gtk2_nokto_line_file) $(noktodir)/gtk-2.0/Lines
	cp -Rv $(gtk2_nokto_other_file) $(noktodir)/gtk-2.0/Others
	cp -Rv $(gtk2_nokto_progress_file) $(noktodir)/gtk-2.0/ProgressBar
	cp -Rv $(gtk2_nokto_range_file) $(noktodir)/gtk-2.0/Range
	cp -Rv $(gtk2_nokto_scrollbar_file) $(noktodir)/gtk-2.0/Scrollbars
	cp -Rv $(gtk2_nokto_shadow_file) $(noktodir)/gtk-2.0/Shadows
	cp -Rv $(gtk2_nokto_spin_file) $(noktodir)/gtk-2.0/Spin
	cp -Rv $(gtk2_nokto_toolbar_file) $(noktodir)/gtk-2.0/Toolbar

if ENABLE_GTK_NEXT
	$(MKDIR_P) $(adaptadir)/gtk-3.22
	$(MKDIR_P) $(adaptadir)/gtk-3.22/assets
	cp -Rv $(gtknext_file) $(adaptadir)/gtk-3.22
	cp -Rv $(gtk318_asset_file) $(adaptadir)/gtk-3.22/assets
	cd $(adaptadir)
	ln -sf ../Adapta/gtk-3.22 $(noktodir)/gtk-3.22
endif

uninstall-local:
	test -e $(noktodir)/index.theme && rm -rfv $(noktodir)/index.theme
	test -e $(noktodir)/gtk-3.0 && rm -rfv $(noktodir)/gtk-3.0
	test -e $(noktodir)/gtk-3.20 && rm -rfv $(noktodir)/gtk-3.20
	test -e $(noktodir)/gtk-2.0 && rm -rfv $(noktodir)/gtk-2.0

	test -e $(adaptadir)/index.theme && rm -rfv $(adaptadir)/index.theme
	test -e $(adaptadir)/gtk-3.0 && rm -rfv $(adaptadir)/gtk-3.0
	test -e $(adaptadir)/gtk-3.20 && rm -rfv $(adaptadir)/gtk-3.20
	test -e $(adaptadir)/gtk-2.0 && rm -rfv $(adaptadir)/gtk-2.0

if ENABLE_GTK_NEXT
	test -e $(noktodir)/gtk-3.22 && rm -rfv $(noktodir)/gtk-3.22
	test -e $(adaptadir)/gtk-3.22 && rm -rfv $(adaptadir)/gtk-3.22
endif
